manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82249961new 
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: 82249961new 
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/cloud-sample
            name: "82249961new-volume"
            readOnly: false
            subPath: cloud-sample
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: "82249961new-volume"
        persistentVolumeClaim:
          claimName: "prod-cepg-aa-std-pvc"
      - name: application-properties
        configMap:
          name: "82249961new-configmap"
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
