manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82249961new-ingress"
spec:
  ingressClassName: nginx
  rules:
  - host: "app.cepg-82249961new-sa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: "my-82249961new"
            port:
              number: 8080
        pathType: Prefix
